--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
     "lodash": "^4.14.0",
-    "mysql": "^2.11.1"
+    "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7",
+    "socket.io": "^1.4.8",
+    "underscore": "^1.8.3",
+    "uuid": "^2.0.2"
   }
 }
