--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ceda",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,12 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
-    "handlebars": "^4.0.5",
+    "express-session": "^1.14.1",
+    "jade": "^1.11.0",
     "lodash": "^4.14.0",
+    "mongoose": "^4.6.1",
     "mysql": "^2.11.1",
     "node-static": "^0.7.8",
     "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "socket.io": "^1.4.8",
     "underscore": "^1.8.3",
     "uuid": "^2.0.2",
