--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ceda",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -9,17 +8,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.8",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "jade": "^1.11.0",
     "lodash": "^4.14.0",
+    "mongodb": "^2.2.10",
     "mongoose": "^4.6.1",
+    "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "node-static": "^0.7.8",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "passport-twitter": "^1.0.4",
+    "should": "^11.1.0",
     "socket.io": "^1.4.8",
+    "static-favicon": "^2.0.0-alpha",
     "underscore": "^1.8.3",
     "uuid": "^2.0.2",
     "webrtc.io": "0.0.4"
