--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.14.1",
     "jade": "^1.11.0",
     "lodash": "^4.14.0",
@@ -24,6 +25,8 @@
     "mysql": "^2.11.1",
     "node-static": "^0.7.8",
     "node-uuid": "^1.4.7",
+    "nodemailer": "^2.6.4",
+    "nodemailer-postmark-transport": "^1.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
