--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ceda",
   "version": "1.0.0",
+  "engines" : {
+    "node" : "4.2.4"
+    },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
