--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "engines": {
-    "node" : "4.2.4"
+    "node" : "4.2.4",
+    "npm" : "3.9.3"
     },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
