--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "ceda",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "A safe space to chat with people going through the same things",
   "engines": {
     "node" : "4.2.4",
     "npm" : "3.9.3"
-    },
+  },
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "async": "^2.1.2",
     "bcrypt-nodejs": "0.0.3",
