--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "A safe space to chat with people going through the same things",
   "engines": {
-    "node" : "4.2.4",
-    "npm" : "3.9.3"
+    "node" : "5.9.1",
+    "npm" : "3.7.3"
   },
   "main": "app.js",
   "scripts": {
@@ -12,6 +12,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "express": "4.13.3",
+    "jade": "^1.11.0",
+  }
+}
+
+/*"dependencies": {
     "async": "^2.1.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
@@ -42,4 +48,4 @@
     "uuid": "^2.0.2",
     "webrtc.io": "0.0.4"
   }
-}
+  */
