--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "start": "node app.js"
   },
-  "license": "MIT",
   "dependencies": {
     "express": "4.13.3",
-    "jade": "^1.11.0",
-  }
+    "jade": "^1.11.0"
+  },
+  "license": "MIT"
 }
 
 /*"dependencies": {
