--- a/package.json
+++ b/package.json
@@ -3,16 +3,37 @@
   "version": "1.0.0",
   "description": "A safe space to chat with people going through the same things",
   "engines": {
-    "node" : "5.9.1",
-    "npm" : "3.7.3"
+    "node": "5.9.1"
   },
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "4.13.3",
-    "jade": "^1.11.0"
+    "async": "^2.1.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.2.0",
+    "express": "^4.14.0",
+    "express-flash": "0.0.2",
+    "express-session": "^1.14.1",
+    "jade": "^1.11.0",
+    "mongodb": "^2.2.10",
+    "mongoose": "^4.6.1",
+    "morgan": "^1.7.0",
+    "node-static": "^0.7.8",
+    "nodemailer": "^2.6.4",
+    "nodemailer-postmark-transport": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "passport-twitter": "^1.0.4",
+    "socket.io": "^1.4.8",
+    "uuid": "^2.0.2"
   },
   "license": "MIT"
 }
