--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "morgan": "^1.7.0",
     "node-static": "^0.7.8",
     "nodemailer": "^2.6.4",
-    "nodemailer-postmark-transport": "^1.1.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "passport-twitter": "^1.0.4",
+    "postmark": "1.3.1",
     "socket.io": "^1.4.8",
     "uuid": "^2.0.2"
   },
