--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "debug": "^2.2.0",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-flash": "0.0.2",
     "express-session": "^1.14.1",
