--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "passport-local-mongoose": "^4.0.0",
     "passport-twitter": "^1.0.4",
     "postmark": "1.3.1",
+    "serve-favicon": "^2.3.2",
     "socket.io": "^1.4.8",
-    "uuid": "^2.0.2"
+    "uuid": "^2.0.2",
+    "web-push": "^3.2.0"
   },
   "license": "MIT"
 }
