--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.14.0",
     "express-flash": "0.0.2",
     "express-session": "^1.14.1",
+    "fs": "0.0.1-security",
     "jade": "^1.11.0",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.1",
