--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postmark": "1.3.1",
     "serve-favicon": "^2.3.2",
     "socket.io": "^1.4.8",
+    "util": "^0.10.3",
     "uuid": "^2.0.2",
     "web-push": "^3.2.0"
   },
