--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.14.1",
     "express-validator": "^3.0.0",
     "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jade": "^1.11.0",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.1",
